@@ -1,7 +1,7 @@
 /*
  * AS an assembler for ARM
  * Copyright (c) 1992 Niklas Röjemo
- * Copyright (c) 2004-2010 GCCSDK Developers
+ * Copyright (c) 2004-2012 GCCSDK Developers
  * 
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -23,7 +23,13 @@
 #ifndef help_cpu_header_included
 #define help_cpu_header_included
 
-int help_cpuImm8s4 (int value) __attribute__ ((__const__));
-int Help_SplitByImm8s4 (unsigned int cnst, unsigned int c[4]);
+#ifdef HAVE_STDINT_H
+#  include <stdint.h>
+#elif HAVE_INTTYPES_H
+#  include <inttypes.h>
+#endif
+
+uint32_t Help_CPUImm8s4 (uint32_t value) __attribute__ ((__const__));
+unsigned Help_SplitByImm8s4 (uint32_t cnst, uint32_t c[4]);
 
 #endif
